--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div class="main">
                 <div class="ball1"></div>
                 <div class="ball2"></div>
+                <div class="shadow"></div>
             </div>
         </div>
     </body>
